--- a/src/assets/css/faq.css
+++ b/src/assets/css/faq.css
@@ -11,6 +11,7 @@
 // Containers // Sekelton
 =================================== */
 .container {
+  min-height: 100vh;
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
