--- a/src/assets/css/footer.css
+++ b/src/assets/css/footer.css
@@ -14,6 +14,11 @@
   background-color: var(--global-cgray);
   width: 100vw;
   min-height: 15rem;
+  position: relative;
+  left: 0;
+  bottom: 0;
+  right: 0;
+  margin-bottom: -1rem;
 }
 
 /* ===================================
