--- a/src/assets/css/footer.css
+++ b/src/assets/css/footer.css
@@ -63,6 +63,7 @@
   width: 12rem;
   display: block;
   margin: 2.5rem auto;
+  z-index: -100;
   fill: var(--global-cprimary);
 }
 
@@ -136,13 +137,32 @@
 }
 
 @media (min-width: 992px) {
+
+  .palmtrees-desktop {
+    margin-top: 0;
+  }
+
   .fLinks {
     display: grid;
+    max-width: 75vw;
+    height: 100%;
     grid-template-columns: 0.5fr 0.5fr 1fr;
-    grid-template-rows: 1fr;
-    gap: 0px 0px;
-    grid-auto-flow: row;
     grid-template-areas: "fQuicklinks fLanguages fNewsletter";
+    margin: 0 auto;
+    padding-top: 1rem;
+    z-index: inherit;
+  }
+
+  .fAccordion {
+    min-width: 15rem;
+    height: 25rem;
+    width: auto;
+    background-color: transparent !important;
+  }
+
+  .fAccordionHeader {
+    font-weight: bold;
+    text-decoration: underline;
   }
 
   .fQuicklinks {
@@ -156,8 +176,46 @@
   .fNewsletter {
     grid-area: fNewsletter;
   }
+
+  #fLogo {
+    margin-top: -5rem;
+  }
+
+  /* @Override MUI expand button */
+  .fLinks .css-bz4dnt-MuiCollapse-root {
+    visibility: visible !important;
+    height: 186px !important;
+  }
+
+    .fLinks .css-yw020d-MuiAccordionSummary-expandIconWrapper {
+    visibility: hidden !important
+  }
+
+  .fLinks .css-1pvvkxv-MuiButtonBase-root-MuiAccordionSummary-root {
+    cursor: none !important;
+    pointer-events: none !important;
+  }
+
+  /* @Override border box above footer header(s) */
+  .css-1xe9kig-MuiPaper-root-MuiAccordion-root:before {
+    position: relative !important;
+  }
+
+  
+ 
+  
 }
 
 /* desktops */
+@media (min-width: 1017px) {
+  .palmtrees-desktop {
+    margin-top: 2rem;
+  }
+}
+
 @media (min-width: 1200px) {
+
+  .palmtrees-desktop {
+    margin-top: 5rem;
+  }
 }
