--- a/src/assets/css/faq.css
+++ b/src/assets/css/faq.css
@@ -11,7 +11,9 @@
 // Containers // Sekelton
 =================================== */
 .faqContainer {
-  min-height: 85vh;
+  min-height: auto;
+  max-width: 110rem;
+  margin: 0 auto;
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
