--- a/src/assets/css/footer.css
+++ b/src/assets/css/footer.css
@@ -144,7 +144,7 @@
 
   .fLinks {
     display: grid;
-    max-width: 75vw;
+    max-width: 55rem;
     height: 100%;
     grid-template-columns: 0.5fr 0.5fr 1fr;
     grid-template-areas: "fQuicklinks fLanguages fNewsletter";
@@ -207,15 +207,7 @@
 }
 
 /* desktops */
-@media (min-width: 1017px) {
-  .palmtrees-desktop {
-    margin-top: 2rem;
-  }
-}
-
 @media (min-width: 1200px) {
 
-  .palmtrees-desktop {
-    margin-top: 5rem;
-  }
+
 }
